# rust-zero2prod

./: .dockerignore  .editorconfig  .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  docker-compose.yml  justfile  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-2abd5b2d63ce1aeeeed17aa07b57d8843718a81a0cf2b9843d4bad5049fc61e4.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240204220437_create_subscriptions_table.sql  20240403111607_make_status_not_null_in_subscriptions.sql  20240403111912_create_subscription_tokens_table.sql  20240405142538_create_users_table.sql  20240409144926_seed_user.sql  20240426130058_create_idempotency_table.sql  20240503102023_create_newsletter_issues_table.sql  20240503102709_create_issue_delivery_queue_table.sql
src/: commons.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs  justfile
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
