[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Alexandre Savio <alexsavio@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.33", default-features = false, features = ["clock"] }
config = "0.14.0"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
uuid = { version = "1.7.0", features = ["v4"] }
secrecy = { version = "0.8", features = ["serde"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
serde-aux = "4.5.0"
unicode-segmentation = "1.11.0"
validator = "0.16.0"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
once_cell = "1"
claims = "0.7"
fake = "2.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
wiremock = "0.6.0"
serde_json = "1.0.115"
linkify = "0.10.0"
