[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Alexandre Savio <alexsavio@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
secrecy = { version = "0.8", features = ["serde"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
serde-aux = "4.5"
unicode-segmentation = "1.11"
validator = { version = "0.18", features = ["derive"] }
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1.0"
anyhow = "1.0"
actix-web-lab = "0.20"
argon2 = { version = "0.5", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3.1"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.9", features = ["redis-rs-tls-session"] }
serde_json = "1.0"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
once_cell = "1"
claims = "0.7"
fake = "2.9"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"
wiremock = "0.6"
serde_json = "1.0"
linkify = "0.10"
serde_urlencoded = "0.7.1"
